@@ -15,92 +15,85 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
+
+import static com.food.ordering.system.order.service.domain.entity.Order.FAILURE_MESSAGE_DELIMITER;
 
 @Component
 public class OrderDataAccessMapper {
+
     public OrderEntity orderToOrderEntity(Order order) {
-        OrderEntity entity = OrderEntity.builder()
-            .id(order.getId().getValue())
-            .customerId(order.getCustomerId().getValue())
-            .restaurantId(order.getRestaurantId().getValue())
-            .trackingId(order.getTrackingId().getValue())
-            .address(deliveryAddressToAddressEntity(order.getDeliveryAddress()))
-            .price(order.getPrice().getAmount())
-            .items(orderItemsToOrderItemEntities(order.getItems()))
-            .orderStatus(order.getOrderStatus())
-            .failureMessages(
-                Optional.ofNullable(order.getFailureMessages())
-                    .map(messages -> String.join(Order.FAILURE_MESSAGE_DELIMITER, messages)
-                    ).orElse("")
-            ).build();
+        OrderEntity orderEntity = OrderEntity.builder()
+                .id(order.getId().getValue())
+                .customerId(order.getCustomerId().getValue())
+                .restaurantId(order.getRestaurantId().getValue())
+                .trackingId(order.getTrackingId().getValue())
+                .address(deliveryAddressToAddressEntity(order.getDeliveryAddress()))
+                .price(order.getPrice().getAmount())
+                .items(orderItemsToOrderItemEntities(order.getItems()))
+                .orderStatus(order.getOrderStatus())
+                .failureMessages(order.getFailureMessages() != null ?
+                        String.join(FAILURE_MESSAGE_DELIMITER, order.getFailureMessages()) : "")
+                .build();
+        orderEntity.getAddress().setOrder(orderEntity);
+        orderEntity.getItems().forEach(orderItemEntity -> orderItemEntity.setOrder(orderEntity));
 
-        entity.getAddress()
-            .setOrder(entity);
-        entity.getItems()
-            .forEach(itemEntity -> itemEntity.setOrder(entity));
-
-        return entity;
+        return orderEntity;
     }
 
     public Order orderEntityToOrder(OrderEntity orderEntity) {
         return Order.builder()
-            .orderId(new OrderId(orderEntity.getId()))
-            .customerId(new CustomerId(orderEntity.getCustomerId()))
-            .restaurantId(new RestaurantId(orderEntity.getRestaurantId()))
-            .deliveryAddress(addressEntityToDeliveryAddress(orderEntity.getAddress()))
-            .price(new Money(orderEntity.getPrice()))
-            .items(orderItemEntitiesToOrderItems(orderEntity.getItems()))
-            .trackingId(new TrackingId(orderEntity.getTrackingId()))
-            .orderStatus(orderEntity.getOrderStatus())
-            .failureMessages(Optional.ofNullable(orderEntity.getFailureMessages())
-                .filter(messages -> !messages.isEmpty())
-                .map(messages -> messages.split(Order.FAILURE_MESSAGE_DELIMITER))
-                .map(Arrays::asList)
-                .map(ArrayList::new)
-                .orElseGet(ArrayList::new)
-            ).build();
+                .orderId(new OrderId(orderEntity.getId()))
+                .customerId(new CustomerId(orderEntity.getCustomerId()))
+                .restaurantId(new RestaurantId(orderEntity.getRestaurantId()))
+                .deliveryAddress(addressEntityToDeliveryAddress(orderEntity.getAddress()))
+                .price(new Money(orderEntity.getPrice()))
+                .items(orderItemEntitiesToOrderItems(orderEntity.getItems()))
+                .trackingId(new TrackingId(orderEntity.getTrackingId()))
+                .orderStatus(orderEntity.getOrderStatus())
+                .failureMessages(orderEntity.getFailureMessages().isEmpty() ? new ArrayList<>() :
+                        new ArrayList<>(Arrays.asList(orderEntity.getFailureMessages()
+                                .split(FAILURE_MESSAGE_DELIMITER))))
+                .build();
     }
 
-    private StreetAddress addressEntityToDeliveryAddress(OrderAddressEntity orderAddressEntity) {
-        return new StreetAddress(
-            orderAddressEntity.getId(),
-            orderAddressEntity.getStreet(),
-            orderAddressEntity.getPostalCode(),
-            orderAddressEntity.getCity()
-        );
+    private List<OrderItem> orderItemEntitiesToOrderItems(List<OrderItemEntity> items) {
+        return items.stream()
+                .map(orderItemEntity -> OrderItem.builder()
+                        .orderItemId(new OrderItemId(orderItemEntity.getId()))
+                        .product(new Product(new ProductId(orderItemEntity.getProductId())))
+                        .price(new Money(orderItemEntity.getPrice()))
+                        .quantity(orderItemEntity.getQuantity())
+                        .subTotal(new Money(orderItemEntity.getSubTotal()))
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    private OrderAddressEntity deliveryAddressToAddressEntity(StreetAddress streetAddress) {
-        return OrderAddressEntity.builder()
-            .id(streetAddress.getId())
-            .street(streetAddress.getStreet())
-            .postalCode(streetAddress.getPostalCode())
-            .city(streetAddress.getCity())
-            .build();
+    private StreetAddress addressEntityToDeliveryAddress(OrderAddressEntity address) {
+        return new StreetAddress(address.getId(),
+                address.getStreet(),
+                address.getPostalCode(),
+                address.getCity());
     }
 
     private List<OrderItemEntity> orderItemsToOrderItemEntities(List<OrderItem> items) {
         return items.stream()
-            .map(item -> OrderItemEntity.builder()
-                .id(item.getId().getValue())
-                .productId(item.getProduct().getId().getValue())
-                .price(item.getPrice().getAmount())
-                .quantity(item.getQuantity())
-                .subTotal(item.getSubTotal().getAmount())
-                .build()
-            ).toList();
+                .map(orderItem -> OrderItemEntity.builder()
+                        .id(orderItem.getId().getValue())
+                        .productId(orderItem.getProduct().getId().getValue())
+                        .price(orderItem.getPrice().getAmount())
+                        .quantity(orderItem.getQuantity())
+                        .subTotal(orderItem.getSubTotal().getAmount())
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    private List<OrderItem> orderItemEntitiesToOrderItems(List<OrderItemEntity> orderItemEntities) {
-        return orderItemEntities.stream()
-            .map(item -> OrderItem.builder()
-                .orderItemId(new OrderItemId(item.getId()))
-                .product(new Product(new ProductId(item.getProductId())))
-                .price(new Money(item.getPrice()))
-                .quantity(item.getQuantity())
-                .subTotal(new Money(item.getSubTotal()))
-                .build()
-            ).toList();
+    private OrderAddressEntity deliveryAddressToAddressEntity(StreetAddress deliveryAddress) {
+        return OrderAddressEntity.builder()
+                .id(deliveryAddress.getId())
+                .street(deliveryAddress.getStreet())
+                .postalCode(deliveryAddress.getPostalCode())
+                .city(deliveryAddress.getCity())
+                .build();
     }
 }
